--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ body{
     font-size: 18px;
     display: grid;
     grid-template-areas: "head" "head"
-                         "nav" "nav"
+                         "nav" "main"
                          "foot" "foot";
     grid-template-columns: 1fr 4fr;
     grid-template-rows: auto 1fr auto;
@@ -21,6 +21,10 @@ body > header{
 }
 body > nav{
     grid-area: "nav";
+}
+body > nav ul{
+    list-style-type: none;
+    padding: 0;
 }
 body > main{
     grid-area: main;
