--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,9 @@ body > nav ul{
     list-style-type: none;
     padding: 0;
 }
+body > nav ul li{
+    display: inline;
+}
 body > main{
     grid-area: main;
 }
