--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,10 @@ body#about img{
 body{
     font-size: 18px;
     display: grid;
-    grid-template-areas: "head" "nav"
-                         "main" "main"
-                         "foot" "foot";
+    grid-template-areas:"head" "head"
+                        "nav" "nav"
+                        "main" "main"
+                        "foot" "foot";
     grid-template-columns: 1fr 4fr;
     grid-template-rows: auto 1fr auto;
 }
@@ -20,7 +21,7 @@ body > header{
     grid-area: head;
 }
 body > nav{
-    grid-area: "nav";
+    grid-area: nav;
 }
 body > nav ul{
     list-style-type: none;
@@ -28,6 +29,7 @@ body > nav ul{
 }
 body > nav ul li{
     display: inline;
+    padding-right: 1rem;
 }
 body > main{
     grid-area: main;
