--- a/styles/main.css
+++ b/styles/main.css
@@ -4,11 +4,21 @@ body#about img{
 body{
     font-size: 18px;
     display: grid;
-    grid-template-areas:"head nav"
+    grid-template-areas:"head head"
+                        "nav nav"
                         "main main"
                         "foot foot";
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto auto 1fr auto;
+}
+
+@media screen and (min-width: 25em) {
+    body{
+        grid-template-areas:"head head"
+                            "nav main"
+                            "foot foot";
+        grid-template-rows: auto 1fr auto;
+    }
 }
 h1, h2, h3{
 line-height: 1.2;
