--- a/styles/main.css
+++ b/styles/main.css
@@ -2,9 +2,6 @@
     --vertical-space:2rem;
     --horizontal-space: 3rem;
 }
-body#about img{
-    /* height: 15em; */
-}
 body{
     font-size: 18px;
     display: grid;
@@ -24,15 +21,10 @@ body{
         grid-template-rows: auto 1fr auto;
     }
 }
-
-body > nav ul li{
-    display: inline;
-    padding-right: 1rem;
-}
 h1, h2, h3{
     line-height: 1.2;
 }
-
+body#about img{height: 15em;}
 p{
     max-width: 50em;
 }
