--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,9 @@ body{
     background-image: linear-gradient(288deg, rgb(168, 86, 201) 0%, rgb(168, 86, 201) 3%,rgb(140, 74, 173) 3%, rgb(140, 74, 173) 11%,rgb(112, 61, 145) 11%, rgb(112, 61, 145) 20%,rgb(128,102,162) 20%, rgb(128,102,162) 49%,rgb(102,82,133) 49%, rgb(102,82,133) 71%,rgb(121,119,129) 71%, rgb(121,119,129) 72%,rgb(176,164,164) 72%, rgb(176,164,164) 100%),linear-gradient(67.5deg, rgb(168, 86, 201) 0%, rgb(168, 86, 201) 3%,rgb(140, 74, 173) 3%, rgb(140, 74, 173) 11%,rgb(112, 61, 145) 11%, rgb(112, 61, 145) 20%,rgb(128,102,162) 20%, rgb(128,102,162) 49%,rgb(102,82,133) 49%, rgb(102,82,133) 71%,rgb(121,119,129) 71%, rgb(121,119,129) 72%,rgb(176,164,164) 72%, rgb(176,164,164) 100%),linear-gradient(112.5deg, rgb(168, 86, 201) 0%, rgb(168, 86, 201) 3%,rgb(140, 74, 173) 3%, rgb(140, 74, 173) 11%,rgb(112, 61, 145) 11%, rgb(112, 61, 145) 20%,rgb(128,102,162) 20%, rgb(128,102,162) 49%,rgb(102,82,133) 49%, rgb(102,82,133) 71%,rgb(121,119,129) 71%, rgb(121,119,129) 72%,rgb(176,164,164) 72%, rgb(176,164,164) 100%),linear-gradient(243deg, rgb(168, 86, 201) 0%, rgb(168, 86, 201) 3%,rgb(140, 74, 173) 3%, rgb(140, 74, 173) 11%,rgb(112, 61, 145) 11%, rgb(112, 61, 145) 20%,rgb(128,102,162) 20%, rgb(128,102,162) 49%,rgb(102,82,133) 49%, rgb(102,82,133) 71%,rgb(121,119,129) 71%, rgb(121,119,129) 72%,rgb(176,164,164) 72%, rgb(176,164,164) 100%),linear-gradient(288deg, rgb(81,8,110),rgb(41,77,114)); background-blend-mode:overlay,overlay,overlay,overlay,normal;
     color: var(--body-color);
 }
+main{
+    background-color: white, 0.7;
+}
 h1, h2, h3{
     line-height: 1.2;
     font-family: "Honk", system-ui;
