--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ body{
     color: var(--body-color);
 }
 main{
-    background-color: rgba(255,255,255, 0.7);
+    background-color: rgba(255,255,255, 0.6);
 }
 h1, h2, h3{
     line-height: 1.2;
@@ -74,6 +74,7 @@ body > main{
 }
 body > footer{
     grid-area: foot;
+    color: white;
 }
 header, footer{
     padding-top: var(--vertical-space);
